Add OrderMapper and OrderAddressRepository in OrderService.
Added new methods toCreateAddress, toCreateOrderAddress, getDescriptionById (initial methods)

simplify placeORder method.

Extracted address creation logic to createAddress method.

Added conversion of Addres to OrderAddress with createOrderAddress method

Abstracted payment creation in createPayment method

Moved Order creation logic to createOrderFromDTO method